# bcs-anki2

./: .env.example  .gitignore  .progress_words_647e4891.json  README.md  TODO.md  output.csv  pyproject.toml  run.sh.example  words-test.txt  words.txt
src/bcs_anki/: cli.py  config.py  costs.py  csv_writer.py  dialect.py  dict_cards.py  dict_ocr.py  dict_refine.py  dictionary.py  dictionary_csv.py  errors.py  failures.py  gemini.py  health.py  http.py  images.py  llm.py  logging_utils.py  pipeline.py  progress.py  prompts.py  word_cards.py
src/bcs_anki/workflows/: __init__.py  common.py  dictionary.py  words.py
tests/: conftest.py  test_cli.py  test_config.py  test_costs.py  test_csv_writer.py  test_dict_cards.py  test_dict_ocr.py  test_dict_refine.py  test_dictionary.py  test_gemini.py  test_health.py  test_http.py  test_images.py  test_llm.py  test_parsing.py  test_process_word.py  test_progress.py  test_prompts.py  test_review_parser.py  test_summarize_exception.py
